  corner cases (:issue:`2382`)

* Add -i shorthand for --index flag in pip search

* Do not optionally load C dependencies in requests (:issue:`1840`,
  :issue:`2930`, :issue:`3024`)

* Strip authentication from SVN url prior to passing it into svn
  (:pull:`3697`, :issue:`3209`).

* Also install in platlib with --target option (:pull:`3694`, :issue:`3682`).


**8.1.2 (2016-05-10)**

* Fix a regression on systems with uninitialized locale (:issue:`3575`).

* Use environment markers to filter packages before determining if a
  required wheel is supported. Solves (:issue:`3254`).

* Make glibc parsing for `manylinux1` support more robust for the variety of
  glibc versions found in the wild (:issue:`3588`).

* Update environment marker support to fully support PEP 508 and legacy
  environment markers (:issue:`3624`).

* Always use debug logging to the ``--log`` file (:issue:`3351`).

* Don't attempt to wrap search results for extremely narrow terminal windows
  (:issue:`3655`).


**8.1.1 (2016-03-17)**

* Fix regression with non-ascii requirement files on Python 2 and add support
  for encoding headers in requirement files (:issue:`3548`, :pull:`3547`).


**8.1.0 (2016-03-05)**

* Implement PEP 513, which adds support for the manylinux1 platform tag,
  allowing carefully compiled binary wheels to be installed on compatible Linux
  platforms.

* Allow wheels which are not specific to a particular Python interpreter but
  which are specific to a particular platform (:issue:`3202`).

* Fixed an issue where ``call_subprocess`` would crash trying to print debug
  data on child process failure (:issue:`3521`, :pull:`3522`).

* Exclude the wheel package from the `pip freeze` output (like pip and setuptools).
  :issue:`2989`.

* Allow installing modules from a subdirectory of a vcs repository
  in non-editable mode (:issue:`3217`, :pull:`3466`).

* Make pip wheel and pip download work with vcs urls with subdirectory option
  (:pull:`3466`).
